feat: create,read of user & posts added

--- a/readme
+++ b/readme
@@ -1,9 +1,10 @@
-# Backend
-## Steps
+#Backend
+##Steps
+    - cd backend
     - run 'yarn' to install the dependencies
     - start server using 'yarn start'
 
-## Apis
-    - For Home = http://localhost:8080 
+##Apis
+    - For root = http://localhost:8080 
     - For Login = http://localhost:8080/login
     - For Register = http://localhost:8080/register
